syncing up with unity client and cleaning up a couple errors
