# src/api/dto/response/GamesResponse.ts
@@ -1,12 +1,14 @@
-// Autogenerated 2/19/2022 4:49:06 PM
+// Autogenerated 2/19/2022 5:42:12 PM
 import { Entity } from 'typeorm'
+import GameCharacter from '../GameCharacter'
 
 /**
  * @description - collection of games
  */
 @Entity()
-export class GamesResponse {
+export class GamesResponse extends GameCharacter {
   constructor(item: any) {
+    super(item)
   }
 }
 
